add progress to evaluation

--- a/9_apprentissage_supervise-part2/evaluation/evaluation_youcef_KACER.ipynb
+++ b/9_apprentissage_supervise-part2/evaluation/evaluation_youcef_KACER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -137,15 +137,16 @@
       "********************************************************************\n",
       "* classifier          * score     * train time (s) * test time (s) *\n",
       "********************************************************************\n",
-      "* LDA                 * 0.95503   * 0.01242        * 0.00027       *\n",
       "********************************************************************\n",
-      "* LogisticRegression  * 0.94974   * 0.22337        * 0.00020       *\n",
+      "* LDA                 * 0.95503   * 0.01246        * 0.00060       *\n",
       "********************************************************************\n",
-      "* KNN                 * 0.97619   * 0.00246        * 0.06103       *\n",
+      "* LogisticRegression  * 0.94974   * 0.35184        * 0.00425       *\n",
       "********************************************************************\n",
-      "* QDA                 * 0.88624   * 0.04128        * 0.00300       *\n",
+      "* KNN                 * 0.97619   * 0.00217        * 0.21086       *\n",
       "********************************************************************\n",
-      "* KNN best            * 0.98148   * 0.00388        * 0.08853       *\n",
+      "* QDA                 * 0.89683   * 0.08622        * 0.00718       *\n",
+      "********************************************************************\n",
+      "* KNN best            * 0.98148   * 0.00634        * 0.08725       *\n",
       "********************************************************************\n"
      ]
     }
@@ -154,10 +155,20 @@
     "# display results\n",
     "print \"*\"*68\n",
     "print \"* classifier          * score     * train time (s) * test time (s) *\"\n",
+    "print \"*\"*68\n",
     "for r in results:\n",
     "    print \"*\"*68\n",
     "    print \"*\",r[0],\" * %0.5f   * %0.5f        * %0.5f       *\" % (r[1],r[2],r[3])\n",
     "print \"*\"*68\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- On note que le classifieur le plus court en training est le KNN, ce qui n'est pas etonnant car ce classifieur n'a aucun calcul de paramètres à réaliser. En revanche, il a le temps de test le plus long car il calcule un grand nombre de distance (*ntest x ntrain*). \n",
+    "- Le temps de training du LDA est plus court que celui du QDA, car le LDA inverse une seule matrice (celle de variance-covariance supposé commune à toutes les classes) alors que le QDA inverse 10 matrices (celles propre à chaque classe) : on doit d'ailleurs pouvoir constater un facteur multiplicatif d'environ 10 entre les deux temps.\n",
+    "- La Regression Logistique a le temps de training le plus long car face à un probleme multi classe, scikit fait une descente de gradient par la methode de Newton (newton-cg ou qoù il faut calculer un Hessien (très couteux)."
    ]
   },
   {
@@ -6671,7 +6682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
