add progress to evaluation

--- a/9_apprentissage_supervise-part2/evaluation/evaluation_youcef_KACER.ipynb
+++ b/9_apprentissage_supervise-part2/evaluation/evaluation_youcef_KACER.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "- On note que le classifieur le plus court en training est le KNN, ce qui n'est pas etonnant car ce classifieur n'a aucun calcul de paramètres à réaliser. En revanche, il a le temps de test le plus long car il calcule un grand nombre de distance (*ntest x ntrain*). \n",
     "- Le temps de training du LDA est plus court que celui du QDA, car le LDA inverse une seule matrice (celle de variance-covariance supposé commune à toutes les classes) alors que le QDA inverse 10 matrices (celles propre à chaque classe) : on doit d'ailleurs pouvoir constater un facteur multiplicatif d'environ 10 entre les deux temps.\n",
-    "- La Regression Logistique a le temps de training le plus long car face à un probleme multi classe, scikit fait une descente de gradient par la methode de Newton (newton-cg ou qoù il faut calculer un Hessien (très couteux)."
+    "- La Regression Logistique a le temps de training le plus long car face à un probleme multi classe, scikit fait une descente de gradient par la methode de Newton (*'newton-cg'*) ou de quasi-Newton (*'lbfgs'*) où il faut approximer un Hessien (très couteux)."
    ]
   },
   {
