--- a/08_donnees_multimedia-part2/Project/report_latex/report.tex
+++ b/08_donnees_multimedia-part2/Project/report_latex/report.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx} 
 
 
+
 \title{Classification d'images télévisées}
 \author{\textsc{Farhad} - \textsc{Heybati}\\
 \textsc{Youcef} - \textsc{Kacer}\\
@@ -21,7 +22,7 @@
 \frontmatter
 \chapter{Introduction}
 Ce document présente plusieurs méthodes d'extraction d'informations à partir d'images issues d'un débat télévisé.
-Cela afin d'en effectuer une classification binaire en `gros plan` ou `plan large`.
+Cela afin d'en effectuer une classification binaire en \og gros plan \fg{} ou \og large plan \fg{}.
 Nous proposons dans un premier chapître de présenter les images exploitées, et les deux classes qui nous intéressent.
 Dans une seconde partie, nous presentons les méthodes d'extraction d'informations utilisées.
 Puis dans une troisième partie, les résultats obtenus.
@@ -31,7 +32,8 @@ Puis dans une troisième partie, les résultats obtenus.
 \section{Corpus et labelisation}
 Nous allons exploités un total de 2351 images prises à partir de la vidéo d'un débat télévisé \cite{ref} .
 Nous avons exploité le fichier de transcription au format .trs \cite{ref} associé à cette vidéo, cela afin d'extraire les différents classes, et attribuer à chaque image sa classe.
-En effet, le fichier de transcription fournit un total de 9 classes :
+En effet, le fichier de transcription fournit un total de 9 classes : \\
+
 
 \begin{description} % listes descriptives
 
@@ -43,11 +45,11 @@ En effet, le fichier de transcription fournit un total de 9 classes :
 \item[$ALL$ :] Les 5 personnes sont à l'écran
 \item[$MULTI$ :] Entre 2 et 4 personnes sont à l'écran
 \item[$INTRO$ :] Reportage d'introduction à l'écran
-\item[$CREDITS$ :] Générique d'emission à l'écran
+\item[$CREDITS$ :] Générique d'emission à l'écran\\
 
 \end{description}
 
-Par ailleurs, le fichier de transcription donne à chaque intervalle de temps, ce qui est à l'écran à travers ces classes. Moyennant, une conversion du fichier au format xml, on peut obtenir
+Par ailleurs, le fichier de transcription donne à chaque intervalle de temps, ce qui est à l'écran parmi les classes citées plus-haut. Moyennant, une conversion du fichier au format xml, on peut obtenir
 le tableau suivant :
 
 \begin{table}[H]
@@ -84,7 +86,7 @@ $CREDITS$	& 2340.76 & 2349.72 \\
 \clearpage
 
 Les 2351 images étant prises à une seconde d'intervalle tout le long de la vidéo, on peut automatiquement labélisé celles ci via la table de
-correspondance \ref{Table correspondance classe/temps} vue en \pageref{Table correspondance classe/temps}.
+correspondance \ref{Table correspondance classe/temps}.
 Ci-après, nous présentons quelques images pour chacune des 9 classes :
 \begin{figure}[H]
 \begin{center}
@@ -178,22 +180,22 @@ Ci-après, nous présentons quelques images pour chacune des 9 classes :
 
 \section{Classification binaire}
 
-Par la suite, nous allons nous resteindre à seulement deux classes définies comme suit :
+Par la suite, nous allons nous resteindre à seulement deux classes définies comme suit :\\
 \begin{description} % listes descriptives
-\item[$G$ :] `Gros plan` (une seule personne est à l'ecran)
-\item[$L$ :] 'Plan large (au moins deux personnes sont à l'écran)
+\item[$G$ :] \og Gros plan \fg{} (une seule personne est à l'ecran)
+\item[$L$ :] \og Large plan \fg{} (au moins deux personnes sont à l'écran)\\
 \end{description}
 
 
-Les classes $G$ et $L$ peuvent s'exprimer en fonction des 9 classes comme suit :
+Les classes $G$ et $L$ peuvent s'exprimer en fonction des 9 classes comme suit :\\
 
 \begin{description} % listes descriptives
 \item[$G$ :] $M$ | $A$ | $B$ | $C$ | $D$
-\item[$L$ :] $ALL$ | $MULTI$
+\item[$L$ :] $ALL$ | $MULTI$\\
 \end{description}
 
 
-Nous avons donc deux classes d'images $G$ et $L$ dont voici plusieurs exemples :
+Nous avons donc deux classes d'images $G$ et $L$ dont voici plusieurs exemples :\\
 
 \begin{figure}[H]
 \begin{center}
@@ -228,7 +230,7 @@ Par la suite, nous allons expliciter différentes manières d'extraire de l'info
 \section{Histogramme orienté du gradient}
 
 Cette méthode consiste à extraire l'information local de contours. Sa première utilisation a consisté en 
-la détection de piétons \cite{hog}. Pour une image donné, le vecteur descripteur des $HOG$ est la concaténation
+la détection de piétons \cite{hog}. Pour une image donné, le vecteur descripteur des \begin{itshape}HOG\end{itshape} est la concaténation
 d'histogrammes de l'amplitude du gradient (en fonction de l'orientation) pris sur un découpage de l'image:
 \begin{figure}[H]
 \begin{center}
@@ -254,6 +256,30 @@ ce qui donnera beaucoup de gradient nul, et donc un descripteur \begin{itshape}s
 \caption{histogramme orienté du gradient pour les gros plans (classe $G$)}
 \label{hog_classeG}
 \end{figure}
+
+\section{Reseaux de neurones à convolution pré-entrainé}
+
+Cette méthode consiste à extraire les descripteurs produits par un réseau de neurones à convolution déjà entrainé.
+En effet, en récupérant la sortie de l'avant-dernière couche, on obtient la transformation finale haut-niveau de l'image, avant la couche de classification.
+Cette technique est connu sous le nom de \begin{itshape}Transfer Learning\end{itshape} \cite{DBLP:journals/corr/YosinskiCBL14} et a fait ses preuves dans 
+le cas de réseaux de neurones entrainé sur la base d'images \begin{itshape}ImageNet\end{itshape} \cite{imagenet_cvpr09}.
+Cette base de près de 10 millins d'images, contient une multitude de classes (animaux,ustensiles,humains,...) organisé hiérarchiquement, et on peut espérer que les gros plans
+(classe $G$) correspondent à l'une des ses classes,et de même pour les images plan large (classe $L$), de telle sorte qu'on puisse ensuite séparer les descripteurs via un classifieur
+ supervisé.
+
+\chapter{Résultats}
+\section{Extraction de contours}
+\section{Extraction de teinte}
+\section{Histogramme orienté du gradient}
+Nous avons extrait les descripteurs \begin{itshape}HOG\end{itshape} pour chacune des images de classe $G$ et $L$, en utilisant une fenêtre glissante de taille $32x32$ avec un overlap. Puis, nous 
+leur avons appliquer différent classifieurs supervisés. Nous avons découpé le set de descripteurs en deux sous-ensembles représentant 70\% du total pour l'entrainement, 
+30\% pour le test. Les resultats de classification sont illustrés dans la table.
+\section{Reseaux de neurones à convolution pré-entrainé}
+Nous avons utilisé le code \begin{itshape}Overfeat\end{itshape} \cite{DBLP:journals/corr/SermanetEZMFL13}, récupéré par clonage du dépôt 
+Github correspondant \cite{overfeat}, pré-entrainé sur la base \begin{itshape}ImageNet\end{itshape} \cite{imagenet_cvpr09}.
+Nous avons extrait les descripteurs pour chacune des images de classe $G$ et $L$ pour leur appliquer différent classifieurs
+ supervisés. Nous avons découpé le set de descripteurs en deux sous-ensembles s 70\% du total pour l'entrainement, 30\% pour le test.
+ Les resultats de classification sont illustrés dans la table.
 
 \backmatter
 
