add progress to evaluation latex report

--- a/08_donnees_multimedia-part2/Project/report_latex/biblio.bib
+++ b/08_donnees_multimedia-part2/Project/report_latex/biblio.bib
@@ -68,3 +68,12 @@ Pour author, les noms et prénoms sont séparés par une vigule, et les différe
 	year={2014},
 	url={https://scikit-learn.org/stable/auto_examples/text/document_classification_20newsgroups.htm}
 }
+
+@misc{
+wiki:hsv,
+	author = "Wikipédia",
+	title = "Teinte Saturation Valeur --- Wikipédia{,} l'encyclopédie libre",
+	year = "2016",
+	url = "http://fr.wikipedia.org/w/index.php?title=Teinte_Saturation_Valeur&oldid=125696736",
+	note = "[En ligne; Page disponible le 30-avril-2016]"
+}
