--- a/08_donnees_multimedia-part2/Project/report_latex/report.tex
+++ b/08_donnees_multimedia-part2/Project/report_latex/report.tex
@@ -322,7 +322,9 @@ En prenant comme frontière de décision, la valeur calculée en \ref{hue_fronti
 Par ailleurs, nous avons demandé à différent classifieurs d'effectuer un apprentissage supervisé sur les moyennes de saturation. Pour cela, nous avons divisé les images
 en deux sous-ensembles représentant 70\% du total pour l'entrainement, 30\% pour le test.\\
 Les resultats de cette classification sont illustrés dans la table \ref{Table_resultats_hue}. On voit que SVM et Random Forest donnent des frontières plus complexes qui permettent
-un meilleure score de test (90\%)
+un meilleure score de test (90\%).\\
+Les classifieurs utilisés sont ceux de la librairie \begin{itshape}Scikit-Learn\end{itshape}, implémentés dans le script 
+\begin{itshape}Python\end{itshape} tiré de \cite{scikit_bench}, que nous avons adaptés.
 
 \begin{table}
 \begin{center}
@@ -416,7 +418,10 @@ Nous avons utilisé le code \begin{itshape}Overfeat\end{itshape} \cite{DBLP:jour
 Github correspondant \cite{overfeat}, pré-entrainé sur la base \begin{itshape}ImageNet\end{itshape} \cite{imagenet_cvpr09}.
 Nous avons extrait les descripteurs pour chacune des images de classe $G$ et $L$ pour leur appliquer différent classifieurs
  supervisés. Nous avons découpé le set de descripteurs en deux sous-ensembles 70\% du total pour l'entrainement, 30\% pour le test.
- Les resultats de classification sont illustrés dans la table \ref{Table_resultats_overfeat}.
+ Les resultats de classification sont illustrés dans la table \ref{Table_resultats_overfeat}.\\
+ Les classifieurs utilisés sont ceux de la librairie \begin{itshape}Scikit-Learn\end{itshape}, implémentés dans le script 
+\begin{itshape}Python\end{itshape} tiré de \cite{scikit_bench}, que nous avons adaptés.
+
  
 \begin{table}
 \begin{center}
